feat(inference): define guarded DashScope profiles