@@ -9,11 +9,16 @@ import tools.jackson.databind.SerializationFeature;
 import tools.jackson.databind.json.JsonMapper;
 
 import java.io.IOException;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
-/** P4 registry deliberately exposes only a zero-network replay profile. */
+/** Loads immutable, repository-versioned replay and guarded live profiles. */
 public final class InferenceProfileRegistry {
     private static final String REPLAY_RESOURCE = "inference-profiles/replay-v1.json";
+    private static final java.util.List<String> LIVE_RESOURCES = java.util.List.of(
+            "inference-profiles/dashscope-qwen37-flash-v1.json",
+            "inference-profiles/dashscope-qwen38-max-v1.json"
+    );
     private static final ObjectMapper JSON = JsonMapper.builder(
                     JsonFactory.builder().enable(StreamReadFeature.STRICT_DUPLICATE_DETECTION).build())
             .enable(DeserializationFeature.FAIL_ON_TRAILING_TOKENS)
@@ -31,9 +36,12 @@ public final class InferenceProfileRegistry {
     InferenceProfileRegistry(ClassLoader classLoader) {
         var replay = load(classLoader, REPLAY_RESOURCE);
         if (!"REPLAY".equals(replay.profile().provider()) || replay.profile().networkAllowed()) {
-            throw new IllegalStateException("P4 replay profile must make network access impossible by contract");
+            throw new IllegalStateException("Replay profile must make network access impossible by contract");
         }
-        profiles = Map.of(replay.profile().profileId(), replay);
+        var loaded = new LinkedHashMap<String, ProfileResource>();
+        add(loaded, replay);
+        LIVE_RESOURCES.stream().map(path -> load(classLoader, path)).forEach(resource -> add(loaded, resource));
+        profiles = java.util.Collections.unmodifiableMap(loaded);
     }
 
     public ProfileResource require(String profileId) {
@@ -54,6 +62,12 @@ public final class InferenceProfileRegistry {
             return new ProfileResource(profile, JSON.writeValueAsString(profile));
         } catch (IOException exception) {
             throw new IllegalStateException("Inference profile cannot be loaded: " + path, exception);
+        }
+    }
+
+    private static void add(Map<String, ProfileResource> loaded, ProfileResource resource) {
+        if (loaded.putIfAbsent(resource.profile().profileId(), resource) != null) {
+            throw new IllegalStateException("Duplicate inference profile id " + resource.profile().profileId());
         }
     }
 
